# probabilistic_ontology_engine

./: .env.example  .gitignore  BACKFILL_SF_URBAN.md  CLAUDE.md  EVIDENCE_INVENTORY_AUDIT.md  EXPORT_MODE_BUG_AUDIT.md  EXPORT_MODE_BUG_SUMMARY.md  NEXT.md  Procfile  README.md  SF_URBAN_EVIDENCE_AUDIT.md  SF_URBAN_ONTOLOGY_PROVENANCE_AUDIT.md  SF_URBAN_VERIFICATION.md  SNAPSHOT.md  SPEC.md  ai_regime.db-shm  ai_regime.db-wal  corn.db-shm  corn.db-wal  credit_cycle.db-shm  credit_cycle.db-wal  crypto_regime.db-shm  crypto_regime.db-wal  energy_regime.db-shm  energy_regime.db-wal  geopolitics.db-shm  geopolitics.db-wal  labor_market.db-shm  labor_market.db-wal  macro_regime.db-shm  macro_regime.db-wal  natural_gas.db-shm  natural_gas.db-wal  nixpacks.toml  pyproject.toml  railway.toml  sf_urban.db-shm  sf_urban.db-wal  sovereign_debt.db-shm  sovereign_debt.db-wal  (+2 more)
prompts/: snapshot_report.md
scripts/: backfill_sf_urban.py
src/domains/: agriculture_weekly.py
src/engine/: config.py  engine.py  schemas.py  variable_identity.py
tests/: conftest.py
tests/integration/: test_ai_regime_ingestion.py  test_api_ingest_trigger.py  test_art_domain_backend.py  test_art_manual_ingest_operational.py  test_corn_ingestion.py  test_credit_cycle_ingestion.py  test_crypto_regime_ingestion.py  test_debug_entropy.py  test_energy_regime_ingestion.py  test_evidence_geometry.py  test_explore_exploit_mi.py  test_geopolitics_ingestion.py  test_labor_market_ingestion.py  test_learning_pipeline.py  test_lineage_cross_domain.py  test_macro_regime_ingestion.py  test_narrative_snapshot.py  (+12 more)
(+84 files in other folders)
